[package]
name = "github-polls-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker         = { version = "0.8.1", features = ["d1"] }
worker-macros  = "0.8.1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
base64         = "0.22"
sha2           = "0.10"
hmac           = "0.12"
subtle         = "2.5"
rsa            = { version = "0.9", features = ["sha2"] }
signature      = "2"
urlencoding    = "2"
uuid           = { version = "1", features = ["v4", "js"] }
getrandom      = { version = "0.2", features = ["js"] }
thiserror      = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level       = "z"
lto             = true
strip           = true
codegen-units   = 1
panic           = "abort"